{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 27,
  "lineage": "33359f0a-2ef3-d7d0-82e3-288814ca4a92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:internet-gateway/igw-0c964654ee26fd1b4",
            "id": "igw-0c964654ee26fd1b4",
            "owner_id": "698854346108",
            "tags": {
              "Name": "dygo-igw"
            },
            "tags_all": {
              "Name": "dygo-igw"
            },
            "vpc_id": "vpc-08268393f08f3e7ff"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:route-table/rtb-08ecca08f290a987d",
            "id": "rtb-08ecca08f290a987d",
            "owner_id": "698854346108",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c964654ee26fd1b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dygo-rt"
            },
            "tags_all": {
              "Name": "dygo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08268393f08f3e7ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0042255036c82df6c",
            "route_table_id": "rtb-08ecca08f290a987d",
            "subnet_id": "subnet-060775b9d9ebc8d1e"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rt",
            "aws_subnet.subnet",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e3bd9776776212",
            "route_table_id": "rtb-08ecca08f290a987d",
            "subnet_id": "subnet-0490d832ce3cb32c9"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rt",
            "aws_subnet.subnet",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:security-group/sg-07738869401e99464",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07738869401e99464",
            "ingress": [],
            "name": "terraform-20240813034557816900000001",
            "name_prefix": "terraform-",
            "owner_id": "698854346108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dygo-sg"
            },
            "tags_all": {
              "Name": "dygo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08268393f08f3e7ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:subnet/subnet-060775b9d9ebc8d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060775b9d9ebc8d1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698854346108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dygo-subnet-1"
            },
            "tags_all": {
              "Name": "dygo-subnet-1"
            },
            "vpc_id": "vpc-08268393f08f3e7ff"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:subnet/subnet-0490d832ce3cb32c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0490d832ce3cb32c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698854346108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dygo-subnet-2"
            },
            "tags_all": {
              "Name": "dygo-subnet-2"
            },
            "vpc_id": "vpc-08268393f08f3e7ff"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698854346108:vpc/vpc-08268393f08f3e7ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df88a33e559feed0",
            "default_route_table_id": "rtb-0f140a7220b524183",
            "default_security_group_id": "sg-03c5329db1435270d",
            "dhcp_options_id": "dopt-087d3233980babe82",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08268393f08f3e7ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f140a7220b524183",
            "owner_id": "698854346108",
            "tags": {
              "Name": "dygo"
            },
            "tags_all": {
              "Name": "dygo"
            }
          }
        }
      ]
    }
  ]
}